web page changes

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Natural farming"
+<meta name="keywords" content="Natural Farming, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
 	/>
 <script>
 		addEventListener("load", function () {
@@ -100,8 +100,7 @@
         <div class="main-mailposi"> <span class="fa fa-envelope-o" aria-hidden="true"></span> </div>
         <div class="modal_body_left modal_body_left1">
           <h3 class="agileinfo_sign">Our Vision</h3>
-          <p> We envision an equitable and prosperous planet by empowering the Farmer based on traditional knowledge and driven by the wise management of natural resources. We aspire to create a world where the actions of people are based on Compassion towards all living beings. Build thriving communities that sustain the natural environment and allow all life forms to live in Harmony. 
-          </p>
+          <p>We envision an equitable and prosperous planet by empowering the Farmer based on traditional knowledge and driven by the wise management of natural resources. We aspire to create a world where the actions of people are based on Compassion towards all living beings. Build thriving communities that sustain the natural environment and allow all life forms to live in Harmony. </p>
         </div>
       </div>
     </div>
@@ -138,8 +137,7 @@
         <div class="main-mailposi"> <span class="fa fa-envelope-o" aria-hidden="true"></span> </div>
         <div class="modal_body_left modal_body_left1">
           <h3 class="agileinfo_sign">COUNT IT</h3>
-          <p> We start with data. We conduct independent research and draw on the latest technology to develop new insights and recommendations. Our rigorous analysis identifies risks, unveils opportunities, and informs smart strategies. We focus our efforts on Farmers and local communities where the future of our health and
-            well being will be determined. </p>
+          <p> We start with data. We conduct independent research and draw on the latest technology to develop new insights and recommendations. Our rigorous analysis identifies risks, unveils opportunities, and informs smart strategies. We focus our efforts on Farmers and local communities where the future of our health and well being will be determined. </p>
         </div>
       </div>
     </div>
@@ -174,7 +172,7 @@
       <div class="modal-body modal-body-sub_agile">
         <div class="main-mailposi"> <span class="fa fa-envelope-o" aria-hidden="true"></span> </div>
         <div class="modal_body_left modal_body_left1">
-          <h3 class="agileinfo_sign">SCALE IT</h3>
+          <h3 class="agileinfo_sign">Scale IT</h3>
           <p> Once tested, we work with partners to adopt and expand our efforts to carry out our ideas and elevate our impact. We measure success through improvements in people’s lives and in sustaining a healthy environment. </p>
         </div>
       </div>
@@ -191,7 +189,7 @@
         <div class="w3layouts-banner-top banner">
           <div class="container">
             <div class="agileits-banner-info">
-              <h3>Scientific -- Value based</h3>
+              <h3>SCIENTIFIC -- VALUE BASED</h3>
               <p>Traditional Science decoded into <i class="fa fa-tree" aria-hidden="true"></i> practical Technology</p>
               <div class="video-pop-wthree"> <a href="#small-dialog1" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog1" class="mfp-hide w3ls_small_dialog wthree_pop">
@@ -207,8 +205,8 @@
         <div class="w3layouts-banner-top banner-2">
           <div class="container">
             <div class="agileits-banner-info">
-              <h3>Systemic -- Valuable</h3>
-              <p>Holistic value to Farmer to enable<i class="fa fa-tree" aria-hidden="true"></i> everyone’s success</p>
+              <h3>SYSTEMIC -- VALUABLE</h3>
+              <p>Holistic value to Farmer to enable <i class="fa fa-tree" aria-hidden="true"></i> everyone’s success</p>
               <div class="video-pop-wthree"> <a href="#small-dialog2" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog2" class="mfp-hide w3ls_small_dialog wthree_pop">
                   <iframe src="https://player.vimeo.com/video/19251347"></iframe>
@@ -223,7 +221,7 @@
         <div class="w3layouts-banner-top banner-3">
           <div class="container">
             <div class="agileits-banner-info">
-              <h3>Simple -- Victorious</h3>
+              <h3>SIMPLE -- VICTORIOUS</h3>
               <p>Transparent system based in Reality and <i class="fa fa-tree" aria-hidden="true"></i> in-tune with Nature</p>
               <div class="video-pop-wthree"> <a href="#small-dialog3" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog3" class="mfp-hide w3ls_small_dialog wthree_pop">
@@ -303,7 +301,7 @@
           <h4>Our Challenge</h4>
         </div>
         <div class="clearfix"></div>
-        <p>Natural resources are the foundation of human well-being and economic opportunity. But today, we are depleting Earth’s resources at rates that are not sustainable, endangering economies and people’s lives. </p>
+        <p>Natural resources are the foundation of human well-being and economic opportunity. But today, we are depleting Earth’s resources at rates that are not sustainable, endangering economies and people’s lives.</p>
         <a href="#" data-toggle="modal" data-target="#myModal1" class="w3-buttons">Read More</a> </div>
       <div class="col-md-4 col-xs-6 agileits-services-grids">
         <div class="col-xs-3 wthree-ser"> <i class="fa fa-recycle" aria-hidden="true"></i> </div>
@@ -311,7 +309,7 @@
           <h4>Our Vision</h4>
         </div>
         <div class="clearfix"></div>
-        <p>We envision an equitable and prosperous planet by empowering the Farmer based on traditional knowledge and driven by the wise management of natural resources.</p>
+        <p>We envision an equitable and prosperous planet by empowering the Farmer based on traditional knowledge and driven by the wise management of natural resources. We aspire to create a world where the</p>
         <a href="#" data-toggle="modal" data-target="#myModal2" class="w3-buttons">Read More</a> </div>
       <div class="col-md-4 col-xs-6 agileits-services-grids">
         <div class="col-xs-3 wthree-ser"> <i class="fa fa-tree" aria-hidden="true"></i> </div>
@@ -319,7 +317,7 @@
           <h4>Our Approach </h4>
         </div>
         <div class="clearfix"></div>
-        <p>Our rigorous analysis identifies risks, unveils opportunities, and informs smart strategies.we scale it to adopt and expand</p>
+        <p>Our rigorous analysis identifies risks, unveils opportunities, and informs smart strategies. We focus our efforts on Farmers and local communities where the future of our health and well being will be determined. </p>
         <a href="#" data-toggle="modal" data-target="#myModal3" class="w3-buttons">Read More</a> </div>
       <div class="clearfix"> </div>
     </div>
@@ -330,7 +328,8 @@
           <h4>COUNT IT</h4>
         </div>
         <div class="clearfix"></div>
-        <p>We start with data. We conduct independent research and draw on the latest technology to develop new insights and recommendations.</p>
+        <p>We start with data. We conduct independent research and draw on the latest technology to develop new insights and recommendations. Our rigorous analysis
+          identifies risks, unveils opportunities,</p>
         <a href="#" data-toggle="modal" data-target="#myModal4" class="w3-buttons">Read More</a> </div>
       <div class="col-md-4 col-xs-6 agileits-services-grids">
         <div class="col-xs-3 wthree-ser"> <i class="fa fa-globe" aria-hidden="true"></i> </div>
@@ -338,15 +337,15 @@
           <h4>CHANGE IT</h4>
         </div>
         <div class="clearfix"></div>
-        <p>We use our research to test projects to build a strong evidence base. Then, we work with partners to deliver change on the ground that alleviates poverty and strengthens society.</p>
+        <p>We use our research to test projects to build a strong evidence base. Then, we work with partners to deliver change on the ground that alleviates poverty and strengthens society.We hold ourselves</p>
         <a href="#" data-toggle="modal" data-target="#myModal5" class="w3-buttons">Read More</a> </div>
       <div class="col-md-4 col-xs-6 agileits-services-grids">
         <div class="col-xs-3 wthree-ser"> <i class="fa fa-pagelines" aria-hidden="true"></i> </div>
         <div class="col-xs-9 wthree-heading">
-          <h4>SCALE IT </h4>
+          <h4>Scale IT</h4>
         </div>
         <div class="clearfix"></div>
-        <p>Once tested, we work with partners to adopt and expand our efforts to carry out our ideas and elevate our impact.</p>
+        <p>Once tested, we work with partners to adopt and expand our efforts to carry out our ideas and elevate our impact. We measure success through improvements in people’s lives and in sustaining a healthy environment</p>
         <a href="#" data-toggle="modal" data-target="#myModal6" class="w3-buttons">Read More</a> </div>
       <div class="clearfix"> </div>
     </div>
@@ -488,7 +487,7 @@
   </div>
   <div class="gallery-agile-kmsrow">
     <div class="col-xs-3 gallery-agile-grids">
-      <div class="portfolio-hover"> <a href="images/g1.png" data-lightbox="example-set" data-title=""> <img src="images/g1.png" class="img-responsive zoom-img" alt="" /> </a> </div>
+      <div class="portfolio-hover"> <a href="images/g1.jpg" data-lightbox="example-set" data-title=""> <img src="images/g1.jpg" class="img-responsive zoom-img" alt="" /> </a> </div>
     </div>
     <div class="col-xs-3 gallery-agile-grids">
       <div class="portfolio-hover"> <a href="images/g2.jpg" data-lightbox="example-set" data-title=""> <img src="images/g2.jpg" class="img-responsive zoom-img" alt="" /> </a> </div>
@@ -859,17 +858,5 @@
 	</script>
 <!-- //flexSlider (for testimonials) -->
 <!-- //js-scripts -->
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/7.17.2/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="/__/firebase/7.17.2/firebase-analytics.js"></script>
-
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
-
-
 </body>
 </html>
