--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Natural Farming, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+<meta name="keywords" content="Viyomam Natural Farming, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
 	/>
 <script>
 		addEventListener("load", function () {
@@ -842,7 +842,8 @@
 			});
 		});
 	</script>
-<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span> </a>
+<a href="#" id="toTop"> <span id="toTopHover" style="opacity: 1;"> </span> </a>
+<a href="http://viyomamtalk.web.app/" target="_blank" class="toTop"> <span class="toTopHover" style="opacity: 1;"> </span> </a>
 <!-- //smooth scrolling-bottom-to-top -->
 <!-- flexSlider (for testimonials) -->
 <script defer src="js/jquery.flexslider.js"></script>
