update new coloumn

--- a/web/index.html
+++ b/web/index.html
@@ -433,6 +433,19 @@
             </div>
           </div>
         </div>
+		
+		<div class="col-sm-3 col-xs-6 agileits-team-grid">
+          <div class="team-info"> <img src="images/subramani K.jpg" alt="">
+            <div class="team-caption">
+              <h4>Subramani M,Sc</h4>
+              <ul>
+                <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
+                <li> <a href="#"> <i class="fa fa-twitter"></i> </a> </li>
+                <li> <a href="#"> <i class="fa fa-rss"></i> </a> </li>
+              </ul>
+            </div>
+          </div>
+        </div>		
       </div>
       <div class="clearfix"> </div>
     </div>
