--- a/web/index.html
+++ b/web/index.html
@@ -435,9 +435,9 @@
         </div>
 		
 		<div class="col-sm-3 col-xs-6 agileits-team-grid">
-          <div class="team-info"> <img src="images/subramani K.jpg" alt="">
+          <div class="team-info"> <img src="images/subramani.jpg" alt="">
             <div class="team-caption">
-              <h4>Subramani M,Sc</h4>
+              <h4>Subramani K M,Sc</h4>
               <ul>
                 <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
                 <li> <a href="#"> <i class="fa fa-twitter"></i> </a> </li>
