--- a/web/index.html
+++ b/web/index.html
@@ -44,18 +44,6 @@
     <div class="col-xs-4 logo">
       <h1> <a href="index.html"> <span>V</span>iyo <span>M</span>am</a> </h1>
     </div>
-    <!--<div class="col-xs-6 header-w3l">
-				<ul>
-					<li>
-						<a href="#" data-toggle="modal" data-target="#myModal1">
-							<span class="fa fa-unlock-alt" aria-hidden="true"></span> Sign In </a>
-					</li>
-					<li>
-						<a href="#" data-toggle="modal" data-target="#myModal2">
-							<span class="fa fa-pencil-square-o" aria-hidden="true"></span> Sign Up </a>
-					</li>
-				</ul>
-			</div>-->
     <!-- navigation -->
     <div class="col-xs-2 menu"> <a href="" id="menuToggle"> <span class="navClosed"></span> </a>
       <nav> <a href="index.html">Home</a> <a href="#about" class="scroll">About Us</a> <a href="#services" class="scroll">Services</a> <a href="#team" class="scroll">Team</a> <a href="#projects" class="scroll">Projects</a> <a href="#contact" class="scroll">Contact Us</a> </nav>
@@ -433,11 +421,10 @@
             </div>
           </div>
         </div>
-		
-		<div class="col-sm-3 col-xs-6 agileits-team-grid">
+        <div class="col-sm-3 col-xs-6 agileits-team-grid">
           <div class="team-info"> <img src="images/subramani.jpg" alt="">
             <div class="team-caption">
-              <h4>Subramani K M,Sc</h4>
+              <h4>Subramani K M,Sc (Viscom) Web Designer</h4>
               <ul>
                 <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
                 <li> <a href="#"> <i class="fa fa-twitter"></i> </a> </li>
@@ -445,7 +432,7 @@
               </ul>
             </div>
           </div>
-        </div>		
+        </div>
       </div>
       <div class="clearfix"> </div>
     </div>
@@ -632,22 +619,6 @@
 </div>
 <div class="second-contact-agile">
   <div class="col-md-6 form-bg">
-    <!--<form action="#" method="post">
-      <div class="contact-fields">
-        <input type="text" name="Name" placeholder="Name" required="">
-      </div>
-      <div class="contact-fields">
-        <input type="email" name="Email" placeholder="Email" required="">
-      </div>
-      <div class="contact-fields">
-        <input type="text" name="Subject" placeholder="Subject" required="">
-      </div>
-      <div class="contact-fields">
-        <textarea name="Message" placeholder="Message" required=""></textarea>
-      </div>
-      <input type="submit" value="Submit">
-    </form>-->
-    <!-- www.123formbuilder.com script begins here -->
     <iframe allowTransparency="true" style="min-height:730px; height:inherit; overflow:auto;" width="100%;" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="//www.123formbuilder.com/my-contact-form-5586554.html"> </iframe>
     <!-- www.123formbuilder.com script ends here -->
   </div>
@@ -805,26 +776,6 @@
 <!-- //video js (background) -->
 <!-- smoothscroll -->
 <script src="js/SmoothScroll.min.js"></script>
-<!-- //smoothscroll -->
-<!-- password-script -->
-<script>
-		window.onload = function () {
-			document.getElementById("password1").onchange = validatePassword;
-			document.getElementById("password2").onchange = validatePassword;
-		}
-
-		function validatePassword() {
-			var pass2 = document.getElementById("password2").value;
-			var pass1 = document.getElementById("password1").value;
-			if (pass1 != pass2)
-				document.getElementById("password2").setCustomValidity("Passwords Don't Match");
-			else
-				document.getElementById("password2").setCustomValidity('');
-			//empty string means no validation error
-		}
-	</script>
-<!-- //password-script -->
-<!-- start-smooth-scrolling -->
 <script src="js/move-top.js"></script>
 <script src="js/easing.js"></script>
 <script>
@@ -855,8 +806,7 @@
 			});
 		});
 	</script>
-<a href="#" id="toTop"> <span id="toTopHover" style="opacity: 1;"> </span> </a>
-<a href="http://viyomamtalk.web.app/" target="_blank" class="toTop"> <span class="toTopHover" style="opacity: 1;"> </span> </a>
+<a href="#" id="toTop"> <span id="toTopHover" style="opacity: 1;"> </span> </a> <a href="http://viyomamtalk.web.app/" target="_blank" class="toTop"> <span class="toTopHover" style="opacity: 1;"> </span> </a> <a href="#" class="toTop1"> <span class="toTopHover1" style="opacity: 1;"> </span> </a>
 <!-- //smooth scrolling-bottom-to-top -->
 <!-- flexSlider (for testimonials) -->
 <script defer src="js/jquery.flexslider.js"></script>
