--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,8 @@
 <link rel="stylesheet" href="css/lightbox.css" type="text/css" media="all">
 <!-- Lightbox css (for Projects) -->
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
+<link rel="stylesheet" type="text/css" href="css/circle-hover.css"/>
+<link href="css/style_new.css" rel="stylesheet" type="text/css" media="all">
 <!-- Flexslider css (for Testimonials) -->
 <!-- //css files -->
 <!-- web-fonts -->
@@ -165,9 +167,9 @@
         </div>
       </div>
     </div>
-    <!-- //Modal content-->
+	<!-- //Modal content-->
   </div>
-</div>
+  </div>
 <!-- //signup Model -->
 <!-- banner-text -->
 <div class="slider">
@@ -181,7 +183,7 @@
               <p>Traditional Science decoded into <i class="fa fa-tree" aria-hidden="true"></i> practical Technology</p>
               <div class="video-pop-wthree"> <a href="#small-dialog1" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog1" class="mfp-hide w3ls_small_dialog wthree_pop">
-                  <iframe src="https://player.vimeo.com/video/19251347"></iframe>
+                  <iframe src="https://player.vimeo.com/video/472919134"></iframe>
                 </div>
               </div>
               <div class="thim-click-to-bottom"> <a href="#about" class="scroll"> <i class="fa  fa-chevron-down"></i> </a> </div>
@@ -197,7 +199,7 @@
               <p>Holistic value to Farmer to enable <i class="fa fa-tree" aria-hidden="true"></i> everyone’s success</p>
               <div class="video-pop-wthree"> <a href="#small-dialog2" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog2" class="mfp-hide w3ls_small_dialog wthree_pop">
-                  <iframe src="https://player.vimeo.com/video/19251347"></iframe>
+                  <iframe src="https://player.vimeo.com/video/472919134"></iframe>
                 </div>
               </div>
               <div class="thim-click-to-bottom"> <a href="#about" class="scroll"> <i class="fa  fa-chevron-down"></i> </a> </div>
@@ -213,7 +215,7 @@
               <p>Transparent system based in Reality and <i class="fa fa-tree" aria-hidden="true"></i> in-tune with Nature</p>
               <div class="video-pop-wthree"> <a href="#small-dialog3" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog3" class="mfp-hide w3ls_small_dialog wthree_pop">
-                  <iframe src="https://player.vimeo.com/video/19251347"></iframe>
+                  <iframe src="https://player.vimeo.com/video/472922226"></iframe>
                 </div>
               </div>
               <div class="thim-click-to-bottom"> <a href="#about" class="scroll"> <i class="fa  fa-chevron-down"></i> </a> </div>
@@ -271,7 +273,7 @@
   <h5><strong style="text-decoration:underline;">SHIVA</strong> <strong>S- Simple for Soul </strong> <strong>H-</strong> Holistic and historic <strong>I-</strong> Inclusive and Informative <strong>V-</strong> Vibrant and vigilant <strong>A-</strong> Available for All</h5>
   <a href="#small-dialog4" class="play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle-o" aria-hidden="true"></i> </a>
   <div id="small-dialog4" class="mfp-hide w3ls_small_dialog wthree_pop">
-    <iframe src="https://player.vimeo.com/video/19251347"></iframe>
+    <iframe src="https://player.vimeo.com/video/472922226"></iframe>
   </div>
 </div>
 <!-- //video section -->
@@ -438,6 +440,77 @@
     </div>
   </div>
 </div>
+
+
+<div style="padding-top:30px;">
+<section class="our-services">
+    <h3 class="text-center slideanim">FARMING ETHOS</h3>
+<ul class="ch-grid">
+		<li>
+			<div class="ch-item ch-img-1 slideanim">				
+				<div class="ch-info-wrap">
+					<div class="ch-info">
+						<div class="ch-info-front ch-img-1"></div>
+						<div class="ch-info-back">
+							<h5>Natural Resources</h5>
+							<p> Advanced Scientific Techniques</p>
+						</div>	
+					</div>
+				</div>
+			</div>
+			<h4 class="slideanim">Natural resources</h4>
+			<p class="slideanim"> Advanced Scientific Techniques</p>
+		</li>
+		<li>
+			<div class="ch-item ch-img-2 slideanim">
+				<div class="ch-info-wrap">
+					<div class="ch-info">
+						<div class="ch-info-front ch-img-2"></div>
+						<div class="ch-info-back">
+							<h5>Clean Water</h5>
+							<p>Advanced Irrigation Techniques</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<h4 class="slideanim">Clean Water</h4>
+			<p class="slideanim"> Advanced Irrigation Techniques</p>
+		</li>
+		<li>
+			<div class="ch-item ch-img-3 slideanim">
+				<div class="ch-info-wrap">
+					<div class="ch-info">
+						<div class="ch-info-front ch-img-3"></div>
+						<div class="ch-info-back">
+							<h5>Stable Climate</h5>
+							<p> Advanced Tools & Machinery</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<h4 class="slideanim">Stable Climate</h4>
+			<p class="slideanim"> Advanced Tools & Machinery</p>
+		</li>
+		<li>
+			<div class="ch-item ch-img-4 slideanim">
+				<div class="ch-info-wrap">
+					<div class="ch-info">
+						<div class="ch-info-front ch-img-4"></div>
+						<div class="ch-info-back">
+							<h5>End Of Harvest</h5>
+							<p>Advanced Harvesting Techniques</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<h4 class="slideanim">End Of Harvest</h4>
+			<p class="slideanim"> Advanced Harvesting Techniques</p>
+		</li>
+	</ul>
+	</section>
+</div>
+
+
 <!-- //team -->
 <!-- experts section -->
 <div class="what-w3ls">
@@ -447,7 +520,7 @@
       <div class="tittle-style"> </div>
     </div>
     <div class="what-grids">
-      <div class="col-md-6 what-grid"> <img src="images/work.png" class="img-responsive" alt="" /> </div>
+      <div class="col-md-6 what-grid"> <img src="images/work.gif" class="img-responsive" alt="" /> </div>
       <div class="col-md-6 what-grid1">
         <div class="what-top">
           <div class="what-left"> <i class="fa fa-check" aria-hidden="true"></i> </div>
