testing utterances script placement

--- a/web/index.html
+++ b/web/index.html
@@ -768,6 +768,15 @@
     </div>
   </div>
 </div>
+<script
+  async
+  src="https://utteranc.es/client.js"
+  repo="viyomam/Webpage"
+  issue-term="title"
+  theme="github-light"
+  crossorigin="anonymous"
+></script>
+	
 <!-- //footer -->
 <!-- js-scripts -->
 <!-- jquery -->
