--- a/web/index.html
+++ b/web/index.html
@@ -768,15 +768,13 @@
     </div>
   </div>
 </div>
-<script
-  async
-  src="https://utteranc.es/client.js"
-  repo="viyomam/Webpage"
-  issue-term="title"
-  theme="github-light"
-  crossorigin="anonymous"
-></script>
-	
+<script 
+src="https://utteranc.es/client.js" 
+repo="viyomam/website-comments" 
+branch="master" 
+issue-term="Homepage test issue" 
+async="async">
+</script>	
 <!-- //footer -->
 <!-- js-scripts -->
 <!-- jquery -->
