updating discussions repo

--- a/web/index.html
+++ b/web/index.html
@@ -768,13 +768,6 @@
     </div>
   </div>
 </div>
-<script 
-src="https://utteranc.es/client.js" 
-repo="viyomam/website-comments" 
-branch="master" 
-issue-term="Homepage test issue" 
-async="async">
-</script>	
 <!-- //footer -->
 <!-- js-scripts -->
 <!-- jquery -->
@@ -886,7 +879,7 @@ async="async">
 			});
 		});
 	</script>
-<a href="#" id="toTop"> <span id="toTopHover" style="opacity: 1;"> </span> </a> <a href="http://viyomamtalk.web.app/" target="_blank" class="toTop"> <span class="toTopHover" style="opacity: 1;"> </span> </a> <a href="#" class="toTop1"> <span class="toTopHover1" style="opacity: 1;"> </span> </a>
+<a href="#" id="toTop"> <span id="toTopHover" style="opacity: 1;"> </span> </a> <a href="https://github.com/viyomam/viyomam-discussions/discussions" target="_blank" class="toTop"> <span class="toTopHover" style="opacity: 1;"> </span> </a> <a href="#" class="toTop1"> <span class="toTopHover1" style="opacity: 1;"> </span> </a>
 <!-- //smooth scrolling-bottom-to-top -->
 <!-- flexSlider (for testimonials) -->
 <script defer src="js/jquery.flexslider.js"></script>
