--- a/web/index.html
+++ b/web/index.html
@@ -179,13 +179,13 @@
         <div class="w3layouts-banner-top banner">
           <div class="container">
             <div class="agileits-banner-info">
-              <h3>SCIENTIFIC -- VALUE BASED</h3>
-              <p>Traditional Science decoded into <i class="fa fa-tree" aria-hidden="true"></i> practical Technology</p>
-              <div class="video-pop-wthree"> <a href="#small-dialog1" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
+              <!-- <h3>SCIENTIFIC -- VALUE BASED</h3> -->
+              <h3>Delivering traditional agricultural with practical technology</h3>
+              <!-- <div class="video-pop-wthree"> <a href="#small-dialog1" class="view play-icon popup-with-zoom-anim "> <i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video</a>
                 <div id="small-dialog1" class="mfp-hide w3ls_small_dialog wthree_pop">
                   <iframe src="https://player.vimeo.com/video/472919134"></iframe>
                 </div>
-              </div>
+              </div> -->
               <div class="thim-click-to-bottom"> <a href="#about" class="scroll"> <i class="fa  fa-chevron-down"></i> </a> </div>
             </div>
           </div>
